# pmake-recover

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CI-CD-INTEGRATION-GUIDE.md  CI-CD-SETUP-SUMMARY.md  CICD_INTEGRATION_GUIDE.md  CI_CD_DEPLOYMENT_SUMMARY.md  COVERAGE_SYSTEM_SUMMARY.md  Dockerfile  Jenkinsfile  Makefile  PRP-01c-COMPLETION-SUMMARY.md  PRP.md  README.txt  SG_ssh  SG_ssh.pub  TODO.txt  azure-pipelines.yml  bandit.yml  ci_environment_report.json  coverage_summary.json  find.sh  git  grep  gui.py  helpers.py  list.sh  makepin.py  notes.txt  passwordclient.py  passwordserver.py  pmake  precover  pshow  pull.sh  push.sh  (+15 more)
.github/workflows/: ci.yml  coverage-guardian.yml  multi-platform-coverage.yml
files/: GALA  adp  bethesda  bohemia  corrlinks  demo  dud  dummy  firaxis  fpsharedservices  fuckery  gaijin  git  navient  pwc  rockstar  t  uber  ubi  umd  whitehouse
scripts/: ci-setup.sh  ci_coverage_check.sh  ci_environment_detector.py  coverage_validator.py  generate-ci-reports.sh  guardian_enforcer.py  run-tests-ci.sh  run_complete_test_suite.sh  test_ci_integration.sh  validate-ci-setup.sh
src/: Makefile
tests/: __init__.py  conftest.py  test_coverage_reporting.py  test_helpers.py  test_infrastructure.py  test_makepin.py  test_security_infrastructure.py  test_words.py
tests/fixtures/: __init__.py  attack_vectors.py  secure_test_data.py
tests/integration/: test_end_to_end.py
tests/security/: __init__.py  test_attack_scenarios.py  test_crypto_security.py  test_crypto_security_stub.py  test_file_security.py  test_input_validation.py  test_password_security.py  test_stubs_validation.py
tests/unit/: test_encryption.py  test_file_operations.py  test_password_generation.py
